fix: post image overflow

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -64,11 +64,12 @@
     }
 
     &-img {
-        
         width: 100%;
+        
         &-center {
             display: block;
             margin: 40px auto;
+            width: 100%;
             max-width: 400px;
         }
 
